# api/docs/swagger.json
@@ -145,7 +145,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ShoppingCart"
+                            "$ref": "#/definitions/dto.CartDTO"
                         }
                     },
                     "404": {
@@ -912,7 +912,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Favorite"
+                            "$ref": "#/definitions/dto.FavoriteDTO"
                         }
                     },
                     "404": {
@@ -1403,7 +1403,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Library"
+                            "$ref": "#/definitions/dto.LibraryDTO"
                         }
                     },
                     "404": {
@@ -2590,6 +2590,23 @@
         }
     },
     "definitions": {
+        "dto.CartDTO": {
+            "type": "object",
+            "properties": {
+                "games": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Game"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "dto.CategoryDTO": {
             "type": "object",
             "required": [
@@ -2625,6 +2642,23 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.FavoriteDTO": {
+            "type": "object",
+            "properties": {
+                "games": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Game"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -2665,6 +2699,23 @@
                 },
                 "size": {
                     "type": "number"
+                }
+            }
+        },
+        "dto.LibraryDTO": {
+            "type": "object",
+            "properties": {
+                "games": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Game"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -2849,26 +2900,6 @@
                 }
             }
         },
-        "models.Favorite": {
-            "type": "object",
-            "properties": {
-                "games": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Game"
-                    }
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "userControllers": {
-                    "$ref": "#/definitions/models.User"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.Game": {
             "type": "object",
             "properties": {
@@ -2913,32 +2944,6 @@
                 },
                 "updated_at": {
                     "type": "string"
-                }
-            }
-        },
-        "models.Library": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "games": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Game"
-                    }
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "userControllers": {
-                    "$ref": "#/definitions/models.User"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
@@ -3008,26 +3013,6 @@
                 },
                 "updated_at": {
                     "type": "string"
-                }
-            }
-        },
-        "models.ShoppingCart": {
-            "type": "object",
-            "properties": {
-                "games": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Game"
-                    }
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "user": {
-                    "$ref": "#/definitions/models.User"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
