# internal/dto/cartDTO.go
@@ -1,0 +1,9 @@
+package dto
+
+import "TIPPr4/internal/models"
+
+type CartDTO struct {
+	ID     int           `json:"id"`
+	UserID int           `json:"user_id"`
+	Games  []models.Game `json:"games"`
+}
