# internal/models/library.go
@@ -8,7 +8,7 @@ import (
 type Library struct {
 	ID        int            `gorm:"primaryKey" json:"id"`
 	UserID    int            `json:"user_id"`
-	User      User           `gorm:"foreignKey:UserID" json:"userControllers"`
+	User      User           `gorm:"foreignKey:UserID" json:"user"`
 	Games     []Game         `gorm:"many2many:library_games;" json:"games"`
 	CreatedAt time.Time      `json:"created_at"`
 	UpdatedAt time.Time      `json:"updated_at"`
